--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,22 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
-  <title>Opinions</title>
+  <title>Manipur Stats</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script type="text/javascript" src="loader.js"></script>
+  <!--script type="text/javascript" src="YTPlayer.js"></script-->
+  <!--script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script -->
+  <!--script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script-->
+
 </head>
+
 <body>
   <app-root>Loading...</app-root>
 </body>
+
 </html>
