--- a/404.html
+++ b/404.html
@@ -4,13 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Manipur Stats</title>
-  <base href="/opinions/">
+  <base href="/manipurstats/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script type="text/javascript" src="loader.js"></script>
   <!--script type="text/javascript" src="YTPlayer.js"></script-->
-  <!--script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script -->
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   <!--script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script-->
 
 <link href="styles.bundle.css" rel="stylesheet"/></head>
